@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: esound
+Description: esound
+Requires: audiofile
+Version: @VERSION@
+Libs: -L${libdir} -lesd
+Cflags: -I${includedir}
